# bridge_support

./: README.md  bridge.yaml  setup.py
bridge_support/: elevation_map_modifier.py  package.xml  setup.cfg  tf2_bridger.py
bridge_support_ros1/: CMakeLists.txt  package.xml  setup.py
bridge_support_ros1/launch/: bringup_all.launch
bridge_support_ros1/src/: GridMapTransformer.py
bridge_support_ros2/: package.xml  param_bridge.sh  setup.py
bridge_support_ros2/bridge_support/: elevation_map_modifier.py  tf2_bridger.py
bridge_support_ros2/commands/: ros1  ros2
bridge_support_ros2/launch/: bringup_all.launch.py
commands/: ros1  ros2
